Sending to committee

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -49,7 +49,7 @@
 
 \usepackage{xcolor}
 
-\usepackage{refcheck}
+%\usepackage{refcheck}
 % Sepia
 \definecolor{myBGcolor}{HTML}{F6F0D6}
 \definecolor{myTextcolor}{HTML}{4F452C}
@@ -57,4 +57,4 @@
 %\definecolor{myBGcolor}{HTML}{3E3535}
 %\definecolor{myTextcolor}{HTML}{CFECEC}
 %\color{myTextcolor}
-\pagecolor{myBGcolor}
+%\pagecolor{myBGcolor}
