--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -4,7 +4,7 @@
 \input{all_usepackages}
 
 
-\title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences \authnote{TODO: Remove refcheck} }
+\title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
 \author{Evan F. Bollig}
 \college{College of Arts and Science}
 \department{Department of Scientific Computing} % Delete if no department
