--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -85,13 +85,13 @@ GPUs support single and double precision. RBF-FD certainly requires double preci
 \begin{figure} 
 \begin{subfigure}{0.5\textwidth}
 \centering
-\includegraphics[width=\textwidth]{../figures/spmv/roofline_m2050_m2070.eps}
-\caption{Roofline Model for NVidia Fermi class GPUs, M2050 and M2070. SpMV Peak: 36 GFLOP/s.}
+\includegraphics[width=\textwidth]{../figures/spmv/roofline_m2050_m2070-eps-converted-to.pdf}
+\caption{Roofline Model for NVidia Fermi class GPUs, M2050 and M2070 \cite{. SpMV Peak: 36 GFLOP/s.}
 \label{fig:roofline_m2070}
 \end{subfigure}
 \begin{subfigure}{0.5\textwidth}
 \centering
-\includegraphics[width=\textwidth]{../figures/spmv/roofline_k20.eps}
+\includegraphics[width=\textwidth]{../figures/spmv/roofline_k20-eps-converted-to.pdf}
 \caption{Roofline Model for NVidia Kepler K20. SpMV Peak: 52 GFLOP/s.}
 \label{fig:roofline_k20}
 \end{subfigure}
