--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -197,7 +197,7 @@
 	Date-Added = {2013-10-30 14:17:21 +0000},
 	Date-Modified = {2013-10-30 14:24:15 +0000},
 	Month = {October},
-	Note = {Submitted to IEEE Parallel & Distributed Processing Symposium (IPDPS), 2014},
+	Note = {Submitted to IEEE Parallel \& Distributed Processing Symposium (IPDPS), 2014},
 	Title = {{Sparse Matrix Vector Multiplication with Multiple vectors and Multiple Matrices on the MIC Architecture}},
 	Year = {2013}}
 
@@ -1193,7 +1193,7 @@ work. A list of this and other possible avenues for future work is also included
 	Date-Modified = {2012-08-06 14:20:42 -0400},
 	Journal = {in preparation},
 	Title = {{Solving Elliptic PDEs with RBF-generated Finite Differences on Multiple GPUs}},
-	Year = {2012}}
+	Year = {2013}}
 
 @misc{BolligMA2011,
 	Author = {Bollig, E. F.},
